[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Inter-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
extra_spacing_top = -2
extra_spacing_bottom = -2
extra_spacing_char = -1
font_data = ExtResource( 2 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="OrigText" type="TextEdit" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -300.0
margin_right = 440.0
margin_bottom = 40.0
readonly = true
syntax_highlighting = true
show_line_numbers = true

[node name="DescriptionText" type="TextEdit" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -300.0
margin_right = 440.0
margin_bottom = -120.0
readonly = true
wrap_enabled = true

[node name="TimeLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 170.0
margin_top = -105.0
margin_right = 310.0
margin_bottom = -75.0
custom_fonts/font = SubResource( 1 )
text = "0 seconds"
align = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Start" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Start"]
margin_left = 480.0
margin_top = 420.0
margin_right = 749.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 2 )
text = "New pull requests available!

Read your email for directions.

Keep an eye on your remaining time."

[node name="StartButton" type="Button" parent="Start"]
margin_left = 480.0
margin_top = 560.0
margin_right = 630.0
margin_bottom = 600.0
text = "Start"

[node name="PullRequest" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="DiffText" type="TextEdit" parent="PullRequest"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 460.0
margin_top = 40.0
margin_right = 860.0
margin_bottom = 580.0
readonly = true
syntax_highlighting = true
show_line_numbers = true

[node name="MergeButton" type="Button" parent="PullRequest"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 460.0
margin_top = 600.0
margin_right = 640.0
margin_bottom = 640.0
text = "Merge"

[node name="CloseButton" type="Button" parent="PullRequest"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 680.0
margin_top = 600.0
margin_right = 860.0
margin_bottom = 640.0
text = "Close"

[node name="RequestList" type="ItemList" parent="PullRequest"]
margin_left = 920.0
margin_top = 60.0
margin_right = 1240.0
margin_bottom = 600.0
max_columns = 2

[node name="LabelTimer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Start/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="PullRequest/MergeButton" to="." method="_on_MergeButton_pressed"]
[connection signal="pressed" from="PullRequest/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="timeout" from="LabelTimer" to="." method="_on_LabelTimer_timeout"]
